# etl-celery

./: .gitignore  Dockerfile  alembic.ini  bitbucket-pipelines.yml  docker-compose-local.yml  pyproject.toml  pyrightconfig.json  pytest.ini  supervisord.conf
core/domain/govt_house_deal/interface/: govt_house_deal_repository.py
core/domain/kakao_api/interface/: kakao_api_result_repository.py
core/domain/kapt/interface/: kapt_repository.py
core/domain/legal_dong_code/interface/: legal_dong_code_repository.py
core/domain/photo/interface/: photo_repository.py
deploy/: build.py  deploy.py  update.py
deploy/dev/: docker-compose-ecs-api-dev.yml  docker-compose-ecs-cron-dev.yml  docker-ecs-params-api-dev.yml  docker-ecs-params-cron-dev.yml
deploy/prod/: docker-compose-ecs-api-prod.yml  docker-compose-ecs-cron-prod.yml  docker-ecs-params-api-prod.yml  docker-ecs-params-cron-prod.yml
exceptions/: authentication.py  base.py
migrations/: env.py
modules/: main.py
modules/adapter/infrastructure/cache/: redis.py
modules/adapter/infrastructure/celery/: crawler_queue.py  etl_queue.py  task_queue.py
modules/adapter/infrastructure/etl/: __init__.py  bld_deals.py  dl_bld_mapping_reuslts.py  dl_subs_infos.py  mart_dong_type_infos.py  mart_photos.py  mart_private_sale_details.py  mart_private_sales.py  mart_public_sales.py  mart_real_estates.py  wh_basic_infos.py  wh_subscriptions.py
modules/adapter/infrastructure/fastapi/: app.py  config.py
modules/application/use_case/: __init__.py
modules/application/use_case_output/: __init__.py
tests/: conftest.py
(+204 files in other folders)
