[tool.poetry]
name = "antgirl"
version = "0.1.0"
description = ""
authors = ["Harry <harry@apartalk.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.77.1"
alembic = "^1.7.7"
aiomysql = "^0.1.1"
dependency-injector = "^4.39.1"

[tool.poetry.dev-dependencies]
aiosqlite = "^0.17.0"
httpx = "^0.22.0"
pytest-factoryboy = "^2.2.1"
pytest = "^7.1.2"
pytest-xdist = "^2.5.0"
pytest-asyncio = "^0.18.3"
pyright = "^1.1.245"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
